--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="color">
+		<p id="para1">First Paragraph</p>
+		<div id="para2">
+		<p>Odysseus was placed at the Malapert A crater near the lunar south pole on February 23, 2024, marking the United States' return to the Moon for the first time in 50 years.</p>
+		<p>The results open the door for future experiments between even smaller objects and forces with their novel technique employing extremely cold temperatures and devices to isolate vibrations of tiny particles likely proving to be the way forward for measures.</p>
+		</div>
+		<p id="para3">The Indian Space Research Organisation (ISRO) is currently working on the concept, which would fly along with an Indian Mars lander sometime around the start of the 2030s.</p>
+		<ul>
+			<li class="white">First item</li>
+			<li class="gray">Second item</li>
+			<li class="pink">Third item</li>
+			<li class="gray">Fourth item</li>
+			<li class="white">Fifth item</li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
