--- a/main.html
+++ b/main.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <html>
-<div id="color">
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-		<p id="para1">First Paragraph</p>
+		<div id="maindiv">
+			<p id="para1">First Paragraph</p>
 		<div id="para2">
 		<p>Odysseus was placed at the Malapert A crater near the lunar south pole on February 23, 2024, marking the United States' return to the Moon for the first time in 50 years.</p>
 		<p>The results open the door for future experiments between even smaller objects and forces with their novel technique employing extremely cold temperatures and devices to isolate vibrations of tiny particles likely proving to be the way forward for measures.</p>
